--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@deps/ui-ar": ["libs/ui-ar/src/index.ts"],
+      "@deps/ui-br": ["libs/ui-br/src/index.ts"],
+      "@deps/ui-cr/*": ["libs/ui-cr/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
